--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cloud-graphics",
+  "name": "mdx-bundler-components-override",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "esbuild": "^0.14.27",
+    "mdx-bundler": "^8.0.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
