--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "esbuild": "^0.14.27",
-    "mdx-bundler": "^8.0.1",
+    "@mdx-js/esbuild": "^2.1.1",
+    "@mdx-js/react": "^2.1.1",
+    "esbuild": "^0.14.39",
+    "mdx-bundler": "^9.0.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
