--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@mdx-js/esbuild": "^2.1.1",
+    "@mdx-js/mdx": "^2.1.1",
     "@mdx-js/react": "^2.1.1",
     "esbuild": "^0.14.39",
     "mdx-bundler": "^9.0.0",
@@ -22,6 +24,7 @@
     "@types/react": "17.0.41",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "patch-package": "^6.4.7",
     "typescript": "4.6.2"
   }
 }
